--- a/main.css
+++ b/main.css
@@ -15,6 +15,25 @@
     text-align: center;
 }
 
+.btnWrapper {
+    margin-top: 2rem;
+}
+
+.nav-link {
+    margin-left: 30px;
+}
+
+button.homeBtn {
+    background-color: chocolate;
+    color: antiquewhite;
+    display: block;
+    margin: auto;
+}
+
+h5.modal-title {
+    margin: left;
+}
+
 .dirRtl {
     text-align: right;
     padding: 7px;
@@ -36,6 +55,33 @@ row {
     width: auto;
     max-width: 100%;
     padding: 7px;
+}
+
+.imgCenter {
+    display: block;
+    margin: auto;
+}
+
+.modalFormWrapper {
+    padding: 2rem;
+
+}
+
+.btnCenter {
+    display: block;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    width: 50%;
+}
+
+.iconCenter {
+    display: block;
+    margin: auto;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
 /*
     display: block;
     box-sizing: border-box;
